--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -3,8 +3,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "# Kotlin programming"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# Kotlin programming\n",
+    "## Find sublist\n",
     "\n",
     "This function should return a list containing only the numbers that equal or exceed the threshold."
    ]
@@ -19,12 +24,13 @@
       "Line_19_jupyter",
       "Line_2_jupyter",
       "Line_32_jupyter",
-      "Line_19_jupyter"
+      "Line_19_jupyter",
+      "Line_2_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T14:05:57.746704Z",
-     "start_time": "2025-10-26T14:05:57.707764Z"
+     "end_time": "2025-10-28T07:46:38.789996Z",
+     "start_time": "2025-10-28T07:46:38.604894Z"
     }
    },
    "cell_type": "code",
@@ -34,12 +40,16 @@
     "require(pruneList(listOf(1, 2, 3, 4, 5, 6), 5) == listOf(5, 6))"
    ],
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 1
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "This function should find the smallest element in the list:"
+   "source": [
+    "## Find smallest element\n",
+    "\n",
+    "This function should find the smallest element in the list:"
+   ]
   },
   {
    "metadata": {
@@ -48,12 +58,13 @@
       "Line_6_jupyter",
       "Line_3_jupyter",
       "Line_20_jupyter",
+      "Line_3_jupyter",
       "Line_3_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T13:55:31.751618Z",
-     "start_time": "2025-10-26T13:55:31.720113Z"
+     "end_time": "2025-10-28T07:46:38.848620Z",
+     "start_time": "2025-10-28T07:46:38.790970Z"
     }
    },
    "cell_type": "code",
@@ -63,12 +74,14 @@
     "require(smallest(listOf(5, 3, 2, 4)) == 2)"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 2
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "## Find stats\n",
+    "\n",
     "The `stats` function should return more general stats about the list:\n",
     "\n",
     "* Min value\n",
@@ -100,12 +113,13 @@
       "Line_33_jupyter",
       "Line_21_jupyter",
       "Line_37_jupyter",
-      "Line_8_jupyter"
+      "Line_8_jupyter",
+      "Line_4_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T16:28:15.089756Z",
-     "start_time": "2025-10-26T16:28:14.281351Z"
+     "end_time": "2025-10-28T07:46:39.070257Z",
+     "start_time": "2025-10-28T07:46:38.849731Z"
     }
    },
    "cell_type": "code",
@@ -135,16 +149,29 @@
     "require(stats.sum == 15L)"
    ],
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 3
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Did the solution make multiple passes through the list?  Or did it rely on sorting the input?  If so, we might need a re-think.\n",
+    "## Find stats with provider\n",
+    "\n",
+    "Did the previous solution make multiple passes through the list?  Or did it rely on sorting the input? If so, we might need a re-think.\n",
     "\n",
     "It turns out the function now needs to handle a case where the list of numbers may be too big to hold in memory. Instead\n",
     "of passing the list, we instead pass a function that returns the next element in a (possibly long) series of numbers.\n",
+    "\n",
+    "When the series is complete, the function returns `null`, therefore the return type of this function is `() -> Int?`.\n",
+    "\n",
+    "For testing purposes, we need to write small utility function that converts a list into this kind of function. Just for show, we make it an extension function:"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Subtask: Test support\n",
     "\n",
     "For testing purposes, we need to write small utility function that converts a list into this kind of function. Just for show, we make it an extension function:"
    ]
@@ -164,12 +191,13 @@
       "Line_8_jupyter",
       "Line_25_jupyter",
       "Line_40_jupyter",
-      "Line_25_jupyter"
+      "Line_25_jupyter",
+      "Line_5_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T16:51:11.478624Z",
-     "start_time": "2025-10-26T16:51:11.426565Z"
+     "end_time": "2025-10-28T07:46:39.257802Z",
+     "start_time": "2025-10-28T07:46:39.104952Z"
     }
    },
    "cell_type": "code",
@@ -186,12 +214,16 @@
     "require(provider() == null)"
    ],
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 4
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Here is a revised edition which can handle abitrarily long \"lists\", and which relies on our `provider` function for testing purposes:"
+   "source": [
+    "### Main task\n",
+    "\n",
+    "This revised edition should handle abitrarily long \"lists\", and it relies on our `provider` function for testing purposes:Here is a revised edition which can handle abitrarily long \"lists\", and which relies on our `provider` function for testing purposes:"
+   ]
   },
   {
    "metadata": {
@@ -224,17 +256,18 @@
       "Line_38_jupyter",
       "Line_36_jupyter",
       "Line_39_jupyter",
-      "Line_16_jupyter"
+      "Line_16_jupyter",
+      "Line_6_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T16:51:08.387496Z",
-     "start_time": "2025-10-26T16:51:08.194252Z"
+     "end_time": "2025-10-28T07:46:39.616074Z",
+     "start_time": "2025-10-28T07:46:39.298473Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import java.math.BigInteger\n",
+    "`import java.math.BigInteger\n",
     "\n",
     "interface Stats {\n",
     "    val min: Int\n",
@@ -284,12 +317,14 @@
     "require(stats.sum == 15.toBigInteger())"
    ],
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 5
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "## Provide a hook\n",
+    "\n",
     "In another bizarre twist of fate, it now turns out that our stream processing engine is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
     "\n",
     "The below example is a simple \"sum\" function which hooks into our wonderful machine, generically named `process`:"
@@ -307,12 +342,13 @@
       "Line_31_jupyter",
       "Line_30_jupyter",
       "Line_35_jupyter",
-      "Line_31_jupyter"
+      "Line_31_jupyter",
+      "Line_7_jupyter"
      ]
     },
     "ExecuteTime": {
-     "end_time": "2025-10-26T14:17:00.223818Z",
-     "start_time": "2025-10-26T14:17:00.148748Z"
+     "end_time": "2025-10-28T07:46:39.856446Z",
+     "start_time": "2025-10-28T07:46:39.619195Z"
     }
    },
    "cell_type": "code",
@@ -331,7 +367,7 @@
     "require(process(provider, initial, processor) == 15)\n"
    ],
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 6
   }
  ],
  "metadata": {
