--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -283,9 +283,7 @@
     "It turns out the function now needs to handle a case where the list of numbers may be too big to hold in memory. Instead\n",
     "of passing the list, we instead pass a function that returns the next element in a (possibly long) series of numbers.\n",
     "\n",
-    "When the series is complete, the function returns `null`, therefore the return type of this function is `() -> Int?`.\n",
-    "\n",
-    "For testing purposes, we need to write small utility function that converts a list into this kind of function. Just for show, we make it an extension function:"
+    "When the series is complete, the function returns `null`, therefore the return type of this function is `() -> Int?`."
    ]
   },
   {
