--- a/src/main/Lists-fasit.ipynb
+++ b/src/main/Lists-fasit.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "## Find sublist\n",
     "\n",
-    "This function should return a list containing only the numbers that equal or exceed the threshold."
+    "An obvious solution:"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "source": [
     "## Find smallest element\n",
     "\n",
-    "This function should find the smallest element in the list:"
+    "Also pretty obvious! We are still just ascertaining basic familiarty with code:"
    ]
   },
   {
@@ -82,14 +82,7 @@
    "source": [
     "## Find stats\n",
     "\n",
-    "The `stats` function should return more general stats about the list:\n",
-    "\n",
-    "* Min value\n",
-    "* Max value\n",
-    "* Sum of all values\n",
-    "* Mean of all values\n",
-    "\n",
-    "We have a `Stats` interface which captures all of these:"
+    "This good-enough-for-now solution traverses the list four times:"
    ]
   },
   {
@@ -135,8 +128,8 @@
     "}\n",
     "\n",
     "fun stats(list: List<Int>): Stats = object : Stats {\n",
-    "    override val min = list.min()\n",
-    "    override val max = list.max()\n",
+    "    override val min: Int by lazy { list.min() }\n",
+    "    override val max get() = list.max()\n",
     "    override val sum = list.sumOf { it.toLong() }\n",
     "    override val mean = sum.toDouble() / list.size;\n",
     "}\n",
@@ -154,16 +147,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "## Find stats with provider\n",
-    "\n",
-    "Did the previous solution make multiple passes through the list?  Or did it rely on sorting the input? If so, we might need a re-think.\n",
-    "\n",
-    "It turns out the function now needs to handle a case where the list of numbers may be too big to hold in memory. Instead\n",
-    "of passing the list, we instead pass a function that returns the next element in a (possibly long) series of numbers.\n",
-    "\n",
-    "When the series is complete, the function returns `null`, therefore the return type of this function is `() -> Int?`."
-   ]
+   "source": "## Find stats with provider\n"
   },
   {
    "metadata": {},
@@ -171,7 +155,7 @@
    "source": [
     "### Subtask: Test support\n",
     "\n",
-    "For testing purposes, we need to write small utility function that converts a list into this kind of function. Just for show, we make it an extension function:"
+    "This `provider()` works by repeatedly invoking in iterator:"
    ]
   },
   {
@@ -220,7 +204,11 @@
    "source": [
     "### Main task\n",
     "\n",
-    "This revised edition should handle abitrarily long \"lists\", and it relies on our `provider` function for testing purposes:Here is a revised edition which can handle abitrarily long \"lists\", and which relies on our `provider` function for testing purposes:"
+    "This solution works by building a `Stats` implementation during one pass of the list.  It computes a `mean` on-demand.\n",
+    "\n",
+    "An alternative solution uses an imperative approach, using a `while` loop.\n",
+    "\n",
+    "The Big Hint here is that the `() -> Int?` signature fits right into the `generateSequence` function which lets us traverse, and fold, the list with ease:"
    ]
   },
   {
@@ -265,7 +253,7 @@
    },
    "cell_type": "code",
    "source": [
-    "`import java.math.BigInteger\n",
+    "import java.math.BigInteger\n",
     "\n",
     "interface Stats {\n",
     "    val min: Int\n",
@@ -274,32 +262,56 @@
     "    val mean: Double\n",
     "}\n",
     "\n",
-    "data class StatsImpl(\n",
-    "    override val min: Int,\n",
-    "    override val max: Int,\n",
-    "    override val sum: BigInteger,\n",
-    "    val count: Int\n",
-    ") : Stats {\n",
+    "fun stats(list: () -> Int?): Stats {\n",
+    "    data class StatsImpl(\n",
+    "        override val min: Int,\n",
+    "        override val max: Int,\n",
+    "        override val sum: BigInteger,\n",
+    "        val count: Int\n",
+    "    ) : Stats {\n",
     "\n",
-    "    constructor() : this(Int.MAX_VALUE, Int.MIN_VALUE, BigInteger.ZERO, 0)\n",
+    "        constructor() : this(Int.MAX_VALUE, Int.MIN_VALUE, BigInteger.ZERO, 0)\n",
     "\n",
-    "    override val mean: Double\n",
-    "        get() = count.takeIf { it > 0 }\n",
-    "            ?.let { (sum.div(it.toBigInteger())).toDouble() }\n",
-    "            ?: 0.toDouble()\n",
+    "        override val mean: Double\n",
+    "            get() = count.takeIf { it > 0 }\n",
+    "                ?.let { (sum.div(it.toBigInteger())).toDouble() }\n",
+    "                ?: 0.toDouble()\n",
     "\n",
-    "    operator fun plus(i: Int) = StatsImpl(\n",
-    "        min(this.min, i),\n",
-    "        max(this.max, i),\n",
-    "        this.sum + i.toBigInteger(),\n",
-    "        this.count + 1\n",
-    "    )\n",
-    "}\n",
+    "        operator fun plus(i: Int) = StatsImpl(\n",
+    "            min(this.min, i),\n",
+    "            max(this.max, i),\n",
+    "            this.sum + i.toBigInteger(),\n",
+    "            this.count + 1\n",
+    "        )\n",
+    "    }\n",
     "\n",
-    "fun stats(list: () -> Int?): Stats =\n",
-    "    generateSequence(list).fold(StatsImpl()) { stats, integer ->\n",
+    "    return generateSequence(list).fold(StatsImpl()) { stats, integer ->\n",
     "        stats + integer\n",
     "    }\n",
+    "}\n",
+    "\n",
+    "fun statsImperative(list: () -> Int?): Stats {\n",
+    "    var next = list()\n",
+    "    var min = next!!\n",
+    "    var max = min\n",
+    "    var count = 0\n",
+    "    var sum = 0.toBigInteger()\n",
+    "\n",
+    "    while (next != null) {\n",
+    "        min = minOf(min, next)\n",
+    "        max = maxOf(max, next)\n",
+    "        sum += next.toBigInteger()\n",
+    "        count++\n",
+    "        next = list()\n",
+    "    }\n",
+    "\n",
+    "    return object : Stats {\n",
+    "        override val min = min\n",
+    "        override val max = max\n",
+    "        override val sum = sum\n",
+    "        override val mean = sum.toDouble() / count.toDouble()\n",
+    "    }\n",
+    "}\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? = iterator().run {\n",
     "    { takeIf { hasNext() }?.let { next() } }\n",
@@ -323,9 +335,9 @@
    "source": [
     "## Provide a hook\n",
     "\n",
-    "In another bizarre twist of fate, it now turns out that our stream processing engine is noticed by our colleagues.  They see it as a stable and mature infrastructure, and they want to \"hook into\" our code with completely arbitary processing logic.  Make it generic!\n",
+    "The generic function is really easy when we already have a folding-based implementation, shown below.\n",
     "\n",
-    "The below example is a simple \"sum\" function which hooks into our wonderful machine, generically named `process`:"
+    "An alternative imperative solution is given with `processImperative`."
    ]
   },
   {
@@ -353,6 +365,21 @@
    "source": [
     "fun <S> process(list: () -> Int?, initial: () -> S, processor: (S, Int) -> S): S =\n",
     "    generateSequence(list).fold(initial(), processor)\n",
+    "\n",
+    "fun <S> processImperative(\n",
+    "    list: () -> Int?,\n",
+    "    initial: () -> S,\n",
+    "    processor: (S, Int) -> S\n",
+    "): S {\n",
+    "    var value = initial()\n",
+    "    var next = list()\n",
+    "\n",
+    "    while (next != null) {\n",
+    "        value = processor(value, next)\n",
+    "        next = list()\n",
+    "    }\n",
+    "    return value\n",
+    "}\n",
     "\n",
     "fun List<Int>.provider(): () -> Int? = iterator().run {\n",
     "    { takeIf { hasNext() }?.let { next() } }\n",
