--- a/src/main/Lists.ipynb
+++ b/src/main/Lists.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "val list: List<Int> = listOf(1, 2, 3, 4, 5, 6)\n",
     "val threshold: Int = 5\n",
-    "val pruned: List<Int> = TODO() // pruneList(list, threshold)\n",
+    "val pruned: List<Int> = TODO() // A call to pruneList, passing the list and threshold\n",
     "\n",
     "require(pruned == listOf(5, 6))"
    ],
@@ -131,7 +131,7 @@
     "// ...\n",
     "\n",
     "val list: List<Int> = listOf(5, 3, 2, 4)\n",
-    "val smallest: Int = TODO() // smallest(list)\n",
+    "val smallest: Int = TODO() // A call to smallest, passing the list\n",
     "\n",
     "require(smallest == 2)"
    ],
@@ -241,7 +241,7 @@
     "// ...\n",
     "\n",
     "val list: List<Int> = listOf(1, 2, 3, 4, 5)\n",
-    "val listStats: Stats = TODO() // stats(list)\n",
+    "val listStats: Stats = TODO() // A call to stats, passing the list\n",
     "\n",
     "require(listStats.min == 1)\n",
     "require(listStats.max == 5)\n",
